// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayProduct.create Throws on [] 1`] = `"ArrayProducts cannot be empty"`;

exports[`ArrayProduct<ProductA> .create 1`] = `
Object {
  "children": Array [
    Object {
      "type": "@escad/core/LeafProduct/ProductA",
    },
    Object {
      "type": "@escad/core/LeafProduct/ProductA",
    },
  ],
  "type": "ArrayProduct",
}
`;

exports[`ArrayProduct<ProductA> Product.getProductType 1`] = `
Object {
  "elementType": Object {
    "id": "@escad/core/LeafProduct/ProductA",
    "type": "LeafProductType",
  },
  "type": "ArrayProductType",
}
`;

exports[`Complex .create 1`] = `
Object {
  "children": Array [
    Object {
      "type": "@escad/core/LeafProduct/ProductA",
    },
    Object {
      "children": Array [],
      "type": "TupleProduct",
    },
    Object {
      "children": Array [
        Object {
          "type": "@escad/core/LeafProduct/ProductA",
        },
        Object {
          "type": "@escad/core/LeafProduct/ProductA",
        },
      ],
      "type": "ArrayProduct",
    },
    Object {
      "children": Array [
        Object {
          "type": "@escad/core/LeafProduct/ProductA",
        },
        Object {
          "type": "@escad/core/LeafProduct/ProductB",
        },
        Object {
          "type": "@escad/core/LeafProduct/ProductC",
        },
      ],
      "type": "TupleProduct",
    },
    Object {
      "product": Object {
        "type": "@escad/core/LeafProduct/ProductB",
      },
      "type": "UnknownProduct",
    },
  ],
  "type": "TupleProduct",
}
`;

exports[`Complex Product.getProductType 1`] = `
Object {
  "elementTypes": Array [
    Object {
      "id": "@escad/core/LeafProduct/ProductA",
      "type": "LeafProductType",
    },
    Object {
      "elementTypes": Array [],
      "type": "TupleProductType",
    },
    Object {
      "elementType": Object {
        "id": "@escad/core/LeafProduct/ProductA",
        "type": "LeafProductType",
      },
      "type": "ArrayProductType",
    },
    Object {
      "elementTypes": Array [
        Object {
          "id": "@escad/core/LeafProduct/ProductA",
          "type": "LeafProductType",
        },
        Object {
          "id": "@escad/core/LeafProduct/ProductB",
          "type": "LeafProductType",
        },
        Object {
          "id": "@escad/core/LeafProduct/ProductC",
          "type": "LeafProductType",
        },
      ],
      "type": "TupleProductType",
    },
    Object {
      "type": "UnknownProductType",
    },
  ],
  "type": "TupleProductType",
}
`;

exports[`Product.getProductType Throw on invalid product 1`] = `"Invalid product passed to Product.getProductType"`;

exports[`ProductA .create 1`] = `
Object {
  "type": "@escad/core/LeafProduct/ProductA",
}
`;

exports[`ProductA Product.getProductType 1`] = `
Object {
  "id": "@escad/core/LeafProduct/ProductA",
  "type": "LeafProductType",
}
`;

exports[`TupleProduct<[]> .create 1`] = `
Object {
  "children": Array [],
  "type": "TupleProduct",
}
`;

exports[`TupleProduct<[]> Product.getProductType 1`] = `
Object {
  "elementTypes": Array [],
  "type": "TupleProductType",
}
`;

exports[`TupleProduct<[ProductA, ProductB]> .create 1`] = `
Object {
  "children": Array [
    Object {
      "type": "@escad/core/LeafProduct/ProductA",
    },
    Object {
      "type": "@escad/core/LeafProduct/ProductB",
    },
  ],
  "type": "TupleProduct",
}
`;

exports[`TupleProduct<[ProductA, ProductB]> Product.getProductType 1`] = `
Object {
  "elementTypes": Array [
    Object {
      "id": "@escad/core/LeafProduct/ProductA",
      "type": "LeafProductType",
    },
    Object {
      "id": "@escad/core/LeafProduct/ProductB",
      "type": "LeafProductType",
    },
  ],
  "type": "TupleProductType",
}
`;

exports[`UnknownProduct .create 1`] = `
Object {
  "product": Object {
    "type": "@escad/core/LeafProduct/ProductB",
  },
  "type": "UnknownProduct",
}
`;

exports[`UnknownProduct Product.getProductType 1`] = `
Object {
  "type": "UnknownProductType",
}
`;

exports[`createLeafProductUtils .productType 1`] = `
Object {
  "id": "@escad/core/LeafProduct/ProductA",
  "type": "LeafProductType",
}
`;

exports[`createLeafProductUtils Consistent keys 1`] = `
Array [
  "create",
  "id",
  "productType",
  "isProductA",
  "convert",
]
`;
